Update styling to fix gap at the bottom and animate home button.

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -44,9 +44,13 @@ header, section {
 
 :target {
     right: 0%;
+    left: 0%;
     position: absolute;
     z-index: 1;
     overflow-y: auto;
+    & ~ #home {
+        right: 0%
+    }
 }
 
 .navigation-list a {
@@ -56,8 +60,9 @@ header, section {
 #home {
     position: fixed;
     top: 0.8rem;
-    right: 0;
+    right: -100%;
     z-index: 1;
+    transition: 0.4s;
 
     a {
         color: white;
@@ -74,10 +79,10 @@ section {
     background: #fff;
     right: -100%;
     width: 100%;
+    height: 100%;
     transition: 0.2s;
-    top: 0;
-    bottom: 0;
-    bottom: -24px;
+    top: 0rem;
+    bottom: 0rem;
 }
 
 .resume-wrapper {
